registration and login stage 1

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <head></head>
   <body>
     <p>Konnekt</p>
-    <input class="first-name js-first-name-login" type="text" placeholder="name">
+    <input class="number js-number-input-login" type="text" placeholder="number">
 
     <input class="password js-password-input-login" type="text" placeholder="password">
 
