--- a/user-page.html
+++ b/user-page.html
@@ -9,6 +9,12 @@
 
     <button class="js-log-out-button">Log out</button>
 
+    <input class="js-user-change-number-input" type="text" placeholder="change number">
+    <input class="js-user-change-password-input" type="text" placeholder="change password">
+
+    <button class="js-user-change-number">change number</button>
+    <button class="js-user-change-password">change password</button>
+
     <script type="module" src="scripts/user-page.js"></script>
   </body>
 </html>
