--- a/registration.html
+++ b/registration.html
@@ -1,21 +1,89 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <title>konnekt</title>
+    <style>
+      body {
+        background-color: #3C5995;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      }
+
+      .registration-page-css{
+        display: flex; 
+        flex-direction: column;  
+        align-items: center;  
+        justify-content: center;  
+        height: 95vh; /* Центрирование по высоте */
+      }
+
+      p {
+        margin: 0;
+        margin-bottom: 20px;
+        font-weight: 700;
+        font-size: 50px;
+        color: #FDFDFD;
+      }
+
+      input {
+        width: 250px;
+        height: 25px;
+        padding-left: 10px;
+        border: none;
+        border-radius: 3px;
+        margin-bottom: 5px;
+        color: #333333;
+      }
+
+      .css-sign-up-button {
+        width: 262px;
+        height: 22px;
+        border: none;
+        border-radius: 3px;
+        background-color: #2F4576;
+        color: #FDFDFD;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        cursor: pointer;
+      }
+
+      .css-sign-up-button:hover {
+        background-color: #233d67;
+      }
+
+      .css-log-in-button {
+        margin-top: 10px;
+        background-color: #3C5995;
+        color: #CDDBDE;
+        border: none;
+        font-weight: lighter;
+        cursor: pointer;
+      }
+
+      .css-log-in-button:hover {
+        text-decoration: underline;
+      }
+
+      .css-registration-error {
+        color: #FDFDFD;
+        margin-bottom: 3px;
+      }
+    </style>
+  </head>
   <body>
-    <p>Konnekt</p>
-    <input class="first-name js-first-name" type="text" placeholder="name">
+    <div class="registration-page-css">
+      <p>konnekt</p>
+      <input class="first-name js-first-name" type="text" placeholder="name">
 
-    <input class="last-name js-last-name" type="text" placeholder="last name">
+      <input class="last-name js-last-name" type="text" placeholder="last name">
 
-    <input class="number js-number" type="text" placeholder="number">
-    
-    <input class="password js-password-input" type="text" placeholder="password">
+      <input class="number js-number" type="text" placeholder="number">
+      
+      <input class="password js-password-input" type="text" placeholder="password">
 
-    <button class="js-sign-up-button">Sign up</button>
-    <button class="js-log-in-button">Log in</button>
+      <div class="css-registration-error registration-error"></div>
 
-    <p class="registration-error"></p>
-
+      <button class="css-sign-up-button js-sign-up-button">Sign up</button>
+      <button class="css-log-in-button js-log-in-button">log in for konnekt</button>
+    </div>
     <script type="module" src="scripts/registration.js"></script>
   </body>
 </html>
