added the ability to communicate between users, locally for now

--- a/user-page.html
+++ b/user-page.html
@@ -8,12 +8,17 @@
     <p class="js-password"></p>
 
     <button class="js-log-out-button">Log out</button>
+    <button class="js-open-chats-button">Chats</button>
 
     <input class="js-user-change-number-input" type="text" placeholder="change number">
     <input class="js-user-change-password-input" type="text" placeholder="change password">
+    <input class="js-user-change-name-input" type="text" placeholder="change name">
+    <input class="js-user-change-last-name-input" type="text" placeholder="change last name">
 
     <button class="js-user-change-number">change number</button>
     <button class="js-user-change-password">change password</button>
+    <button class="js-user-change-name-button">change name</button>
+    <button class="js-user-change-last-name-button">change last name</button>
 
     <script type="module" src="scripts/user-page.js"></script>
   </body>
