--- a/login.html
+++ b/login.html
@@ -2,71 +2,7 @@
 <html>
   <head>
     <title>konnekt</title>
-    <style>
-      body {
-        background-color: #3C5995;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      }
-
-      .login-page-css {
-        display: flex; 
-        flex-direction: column;  
-        align-items: center;  
-        justify-content: center;  
-        height: 95vh; /* Центрирование по высоте */
-      }
-
-      p {
-        margin: 0;
-        margin-bottom: 20px;
-        font-weight: 700;
-        font-size: 50px;
-        color: #FDFDFD;
-      }
-
-      input {
-        width: 250px;
-        height: 25px;
-        padding-left: 10px;
-        border: none;
-        border-radius: 3px;
-        margin-bottom: 5px;
-        color: #333333;
-      }
-
-      .css-log-in-button {
-        width: 262px;
-        height: 22px;
-        border: none;
-        border-radius: 3px;
-        background-color: #2F4576;
-        color: #FDFDFD;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        cursor: pointer;
-      }
-
-      .css-log-in-button:hover {
-        background-color: #233d67;
-      }
-
-      .css-sign-up-button {
-        margin-top: 10px;
-        background-color: #3C5995;
-        color: #CDDBDE;
-        border: none;
-        font-weight: lighter;
-        cursor: pointer;
-      }
-
-      .css-sign-up-button:hover {
-        text-decoration: underline;
-      }
-
-      .css-login-error {
-        color: #FDFDFD;
-        margin-bottom: 3px;
-      }
-    </style>
+    <link rel="stylesheet" href="styles/login.css">
   </head>
   <body style="margin: 0;">
     <div class="login-page-css">
