--- a/registration.html
+++ b/registration.html
@@ -2,75 +2,11 @@
 <html>
   <head>
     <title>konnekt</title>
-    <style>
-      body {
-        background-color: #3C5995;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      }
-
-      .registration-page-css{
-        display: flex; 
-        flex-direction: column;  
-        align-items: center;  
-        justify-content: center;  
-        height: 95vh; /* Центрирование по высоте */
-      }
-
-      p {
-        margin: 0;
-        margin-bottom: 20px;
-        font-weight: 700;
-        font-size: 50px;
-        color: #FDFDFD;
-      }
-
-      input {
-        width: 250px;
-        height: 25px;
-        padding-left: 10px;
-        border: none;
-        border-radius: 3px;
-        margin-bottom: 5px;
-        color: #333333;
-      }
-
-      .css-sign-up-button {
-        width: 262px;
-        height: 22px;
-        border: none;
-        border-radius: 3px;
-        background-color: #2F4576;
-        color: #FDFDFD;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        cursor: pointer;
-      }
-
-      .css-sign-up-button:hover {
-        background-color: #233d67;
-      }
-
-      .css-log-in-button {
-        margin-top: 10px;
-        background-color: #3C5995;
-        color: #CDDBDE;
-        border: none;
-        font-weight: lighter;
-        cursor: pointer;
-      }
-
-      .css-log-in-button:hover {
-        text-decoration: underline;
-      }
-
-      .css-registration-error {
-        color: #FDFDFD;
-        margin-bottom: 3px;
-      }
-    </style>
+    <link rel="stylesheet" href="styles/registration.css">
   </head>
   <body>
     <div class="registration-page-css">
-      <p>konnekt</p>
+      <p>Konnekt</p>
       <input class="first-name js-first-name" type="text" placeholder="name">
 
       <input class="last-name js-last-name" type="text" placeholder="last name">
